AX: Image attachment in email does not show up in AX tree https://bugs.webkit.org/show_bug.cgi?id=159422

Reviewed by Joanmarie Diggs.

Source/WebCore:

When an image loads after the accessibility tree has already been created, the ignored status
of that image does not get updated.

Test: accessibility/image-load-on-delay.html

* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageChanged):

LayoutTests:

* accessibility/image-load-on-delay-expected.txt: Added.
* accessibility/image-load-on-delay.html: Added.


Canonical link: https://commits.webkit.org/177571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202841 268f45cc-cd09-0410-ab3c-d52691b4dbfc